# LLM_RAG_Chatbot

./: Dockerfile  README.md  app.py  docker-compose.yml  log_test.py  pyproject.toml
langsmith_test/: feedback.py
src/backend/: agent.py  get_model.py  prompts.py  vectorstore.py
src/backend/utils/: data_parser.py  tools.py
src/backend/vectorstore/: milvus_vectorstore.py  mongodb_vectorstore.py
src/configs/: log_configs.json
src/evaluations/: evaluation_metrics.py
src/frontend/: frontend.py  frontend_utils.py
src/llm_rag_chatbot/backend/: agent.py  documents_loader.py  embedding.py  vectorstore.py
src/llm_rag_chatbot/backend/data_parser/: pdf_parser.py
src/llm_rag_chatbot/frontend/: frontend.py
